@@ -1,3 +1,4 @@
 
 all:
-	gcc -lpthread -o ethertund ethertund.c
+	gcc -o sysrw.o -c sysrw.c
+	gcc -lpthread -o ethertund sysrw.o ethertund.c
