@@ -1,3 +1,6 @@
+Thu 31 Mar 2011 Flavio Leitner <fleitner@redhat.com> 0.7
+- support more than one way to forward packets (--sysrw)
+
 Thu 10 Mar 2011 Flavio Leitner <fleitner@redhat.com> 0.6
 - public repo
 
